VS2005/Common/VeCADAPI/CadApi.h


//*** end of strings identifiers ************************************



typedef unsigned long VHANDLE;    // pointer to VeCAD object
typedef unsigned long VDWG;       // pointer to VeCAD drawing


typedef void (CALLBACK* F_CCMD )(VDWG hDwg);

typedef void (CALLBACK* F_CDRAG)(VDWG hDwg, int nPoints, double x, double y, double z);

void    CADAPI CadCustomGetData  (VHANDLE hEnt, void* pData);

int     CADAPI CadCustomGetSize  (VHANDLE hEnt);

VHANDLE CADAPI CadCustomGetDataPtr (VHANDLE hEnt);


void  CADAPI CadDrawSet          (int Mode, int Value);

HDC   CADAPI CadDrawGetDC        ();

void  CADAPI CadDrawAddVertex    (double X, double Y, double Z);

int   CADAPI CadDrawGenArc       (double Xcen, double Ycen, double Zcen, double Radius, double AngStart, double AngArc, int nVers);

int   CADAPI CadDrawGenCircle    (double X, double Y, double Z, double Radius, int nVers);

int   CADAPI CadDrawGenChar      (double X, double Y, double Z, double Height, double Angle, double ScaleW, UINT UCode, LPCTSTR szFont, int nVers);

void  CADAPI CadDrawPolyline     ();

void  CADAPI CadDrawPolygon      ();

void  CADAPI CadDrawPolyPolygon  (int* PlineSize, int nPline);

void  CADAPI CadDrawLine         (double X1, double Y1, double Z1, double X2, double Y2, double Z2);

void  CADAPI CadDrawPoint        (double X, double Y, double Z, int PtMode, double PtSize);

void  CADAPI CadDrawText         (VDWG hDwg, LPCTSTR szText, double X, double Y, double Z);

void  CADAPI CadDrawBlock        (VDWG hDwg, VHANDLE hBlock, double X, double Y, double Z, double ScaleX, double ScaleY, double ScaleZ, double RotAngle);


BOOL  CADAPI CadAddCustProp      (int IdProp, LPCTSTR szName, LPCTSTR szValue, int ValType);

BOOL  CADAPI CadSetCustProp      (int IdProp, LPCTSTR szValue);

BOOL  CADAPI CadSetCustPropMode  (int IdProp, BOOL bReadOnly);


/******************************************************************************
* CUSTOM COMMAND
*******************************************************************************/
BOOL    CADAPI CadAddCommand       (VDWG hDwg, int Id, LPCTSTR szCmdName, LPCTSTR szAlias, HCURSOR hCurs, F_CCMD pFunc1, F_CDRAG pFunc2);
 
void    CADAPI CadCmdPutData       (VDWG hDwg, void* pData, int nBytes);

void    CADAPI CadCmdGetData       (VDWG hDwg, void* pData);

int     CADAPI CadCmdGetSize       (VDWG hDwg);

void    CADAPI CadCmdPrompt        (VDWG hDwg, LPCTSTR szText, LPCTSTR szDefaultValue);
 
void    CADAPI CadCmdPromptAdd     (VDWG hDwg, LPCTSTR szValue);
 
int     CADAPI CadCmdUserSelect    (VDWG hDwg);

VHANDLE CADAPI CadCmdUserGetEntity (VDWG hDwg);

int     CADAPI CadCmdUserInput     (VDWG hDwg);

void    CADAPI CadCmdGetInputPoint (VDWG hDwg, double* pX, double* pY, double* pZ);

void    CADAPI CadCmdGetInputStr   (VDWG hDwg, TCHAR* szText);

BOOL    CADAPI CadCmdStrToPoint    (VDWG hDwg, LPCTSTR szValue, double* pX, double* pY, double* pZ);

void    CADAPI CadCmdSetBasePoint  (VDWG hDwg, double X, double Y, double Z);

BOOL    CADAPI CadCmdAddPoint      (VDWG hDwg, double X, double Y, double Z);

BOOL    CADAPI CadCmdGetPoint      (VDWG hDwg, int iPoint, double* pX, double* pY, double* pZ);

int     CADAPI CadCmdCountPoints   (VDWG hDwg);



/********************************************************************
*
*  SELECTION SET
*
*********************************************************************/
void    CADAPI CadSelClear        (VDWG hDwg);

void    CADAPI CadSelectEntity    (VDWG hDwg, VHANDLE hEnt, BOOL bSelect);

UINT    CADAPI CadSelectByLayer   (VDWG hDwg, BOOL bSelect);

UINT    CADAPI CadSelectByPage    (VDWG hDwg, BOOL bSelect);

UINT    CADAPI CadSelectByPolyline(VDWG hDwg, VHANDLE hEnt, BOOL bSelect);

UINT    CADAPI CadSelectByPolygon (VDWG hDwg, VHANDLE hEnt, BOOL bCross, BOOL bSelect);

UINT    CADAPI CadSelectByDist    (VDWG hDwg, double X, double Y, double Z, double Dist, BOOL bCross, BOOL bSelect);

UINT    CADAPI CadSelCount        (VDWG hDwg);

VHANDLE CADAPI CadSelGetFirstPtr  (VDWG hDwg);

VHANDLE CADAPI CadSelGetNextPtr   (VDWG hDwg, VHANDLE hPtr);

void    CADAPI CadSelErase        (VDWG hDwg);

void    CADAPI CadSelCopy         (VDWG hDwg);

void    CADAPI CadSelMove         (VDWG hDwg, double dx, double dy, double dz);

void    CADAPI CadSelScale        (VDWG hDwg, double x0, double y0, double z0, double Scal);

void    CADAPI CadSelRotate       (VDWG hDwg, double x0, double y0, double z0, double Angle);

void    CADAPI CadSelMirror       (VDWG hDwg, double x0, double y0, double z0, double x1, double y1, double z1);

void    CADAPI CadSelExplode      (VDWG hDwg);

VHANDLE CADAPI CadSelJoin         (VDWG hDwg, double Delta);

void    CADAPI CadSelColor        (VDWG hDwg, int Color);


void    CADAPI CadSelDraw         (VDWG hDwg, HDC hDC, int WinLef, int WinBot, int WinW, int WinH, double ViewLef, double ViewBot, double ViewW, double ViewH, DWORD idPage, COLORREF FillColor, COLORREF BordColor, double LwScale);

void    CADAPI CadSelMakeGrips    (VDWG hDwg);


//void    CADAPI CadCbCopy  (VDWG hDwg, HWND hWnd); 
//void    CADAPI CadCbCut   (VDWG hDwg, HWND hWnd); 
BOOL    CADAPI CadCbPaste (VDWG hDwg, HWND hWnd, double dx, double dy, double dz);


DWORD CADAPI CadCountEntities (VDWG hDwg);




/******************************************************************************
* VIEWPOINT
* This functions make projection from 3D model coordinates to 2D display
* It changes appearance of model in a window
* Standard viewpoint positions can be set by CadExecute() and 
* CAD_CMD_VIEW_... commands
*******************************************************************************/
// Set isometric projection by XYZ of view (camera) point
// Viewpoint for plan view is 0,0,1
void   CADAPI CadViewPutPoint    (VDWG hDwg, HWND hWin, double X, double Y, double Z);

void   CADAPI CadViewGetPoint    (VDWG hDwg, HWND hWin, double* pX, double* pY, double* pZ);

// Get coordinates of current view point, model units
double CADAPI CadViewGetPointX   (VDWG hDwg);

double CADAPI CadViewGetPointY   (VDWG hDwg);

double CADAPI CadViewGetPointZ   (VDWG hDwg);

// Set isometric projection by horizontal and vertical view angles (radians)
// The angles for plan view are 0, pi/2 
void   CADAPI CadViewPutAngles   (VDWG hDwg,  HWND hWin, double AngHor, double AngVer);

// Get angles of current viewpoint, radians
double CADAPI CadViewGetAngleHor (VDWG hDwg);

double CADAPI CadViewGetAngleVer (VDWG hDwg);

// zoom rect
void   CADAPI CadViewRect        (VDWG hDwg, HWND hWin, double Xmin, double Ymin, double Xmax, double Ymax);

// scale view in/out
void   CADAPI CadViewScale       (VDWG hDwg, HWND hWin, double Scal, int Xcen, int Ycen);



/******************************************************************************
* COORDINATES CONVERTIONS
* between model space, display projection, window
*******************************************************************************/
void   CADAPI CadCoordModelToDisp (VDWG hDwg, double Xm, double Ym, double Zm, double* pXd, double* pYd);

void   CADAPI CadCoordModelToWin  (VDWG hDwg, double Xm, double Ym, double Zm, long* pXw, long* pYw);

void   CADAPI CadCoordDispToModel (VDWG hDwg, double Xd, double Yd, double* pXm, double* pYm, double* pZm);

void   CADAPI CadCoordDispToWin   (VDWG hDwg, double Xd, double Yd, long* pXw, long* pYw);

void   CADAPI CadCoordWinToModel  (VDWG hDwg, int Xw, int Yw, double* pXm, double* pYm, double* pZm);

void   CADAPI CadCoordWinToDisp   (VDWG hDwg, int Xw, int Yw, double* pXd, double* pYd);

double CADAPI CadDistWinToModel   (VDWG hDwg, int Dwin);

int    CADAPI CadDistModelToWin   (VDWG hDwg, double Dmod);


/******************************************************************************
*   PRINTING
*******************************************************************************/
void   CADAPI CadPrintGetRect       (double* pLeft, double* pBottom, double* pRight, double* pTop);

void   CADAPI CadPrintPutRect       (double Left, double Bottom, double Right, double Top);

void   CADAPI CadPrintPutScale      (double Scal);

double CADAPI CadPrintGetScale      ();

void   CADAPI CadPrintPutScaleLW    (BOOL bScaleLW);

BOOL   CADAPI CadPrintGetScaleLW    ();

void   CADAPI CadPrintPutOffset     (double DX, double DY);

void   CADAPI CadPrintGetOffset     (double* pDX, double* pDY);

void   CADAPI CadPrintPutColor      (BOOL bColor);

BOOL   CADAPI CadPrintGetColor      ();

void   CADAPI CadPrintPutCopies     (UINT Ncopy);

UINT   CADAPI CadPrintGetCopies     ();

void   CADAPI CadPrintPutOrient     (UINT Orient);

UINT   CADAPI CadPrintGetOrient     ();

void   CADAPI CadPrintPutStampPos   (UINT Pos);

UINT   CADAPI CadPrintGetStampPos   ();

void   CADAPI CadPrintPutStampSize  (double TextHeight);

double CADAPI CadPrintGetStampSize  ();

void   CADAPI CadPrintPutStampColor (DWORD Color);

DWORD  CADAPI CadPrintGetStampColor ();

void   CADAPI CadPrintPutStampText  (LPCTSTR szText1, LPCTSTR szText2);

void   CADAPI CadPrintGetStampText  (TCHAR* szText1, TCHAR* szText2);