VS2005/Common/VeCADAPI/CadApi2.bas

Public Declare Sub      CadCustomGetData Lib "vecad.dll" (ByVal hEnt As Long, ByVal pData As Any)
Public Declare Function CadCustomGetSize Lib "vecad.dll" (ByVal hEnt As Long) As Long
Public Declare Function CadCustomGetDataPtr Lib "vecad.dll" (ByVal hEnt As Long) As Long
Public Declare Sub      CadDrawSet Lib "vecad.dll" (ByVal Mode As Long, ByVal Value As Long)
Public Declare Function CadDrawGetDC Lib "vecad.dll" () As Long
Public Declare Sub      CadDrawAddVertex Lib "vecad.dll" (ByVal X As Double, ByVal Y As Double, ByVal Z As Double)
Public Declare Function CadDrawGenArc Lib "vecad.dll" (ByVal Xcen As Double, ByVal Ycen As Double, ByVal Zcen As Double, ByVal Radius As Double, ByVal AngStart As Double, ByVal AngArc As Double, ByVal nVers As Long) As Long
Public Declare Function CadDrawGenCircle Lib "vecad.dll" (ByVal X As Double, ByVal Y As Double, ByVal Z As Double, ByVal Radius As Double, ByVal nVers As Long) As Long
Public Declare Function CadDrawGenChar Lib "vecad.dll" (ByVal X As Double, ByVal Y As Double, ByVal Z As Double, ByVal Height As Double, ByVal Angle As Double, ByVal ScaleW As Double, ByVal UCode As Long, ByVal szFont As String, ByVal nVers As Long) As Long
Public Declare Sub      CadDrawPolyline Lib "vecad.dll" ()
Public Declare Sub      CadDrawPolygon Lib "vecad.dll" ()
Public Declare Sub      CadDrawPolyPolygon Lib "vecad.dll" (ByVal PlineSize As Long, ByVal nPline As Long)
Public Declare Sub      CadDrawLine Lib "vecad.dll" (ByVal X1 As Double, ByVal Y1 As Double, ByVal Z1 As Double, ByVal X2 As Double, ByVal Y2 As Double, ByVal Z2 As Double)
Public Declare Sub      CadDrawPoint Lib "vecad.dll" (ByVal X As Double, ByVal Y As Double, ByVal Z As Double, ByVal PtMode As Long, ByVal PtSize As Double)
Public Declare Sub      CadDrawText Lib "vecad.dll" (ByVal hDwg As Long, ByVal szText As String, ByVal X As Double, ByVal Y As Double, ByVal Z As Double)
Public Declare Sub      CadDrawBlock Lib "vecad.dll" (ByVal hDwg As Long, ByVal hBlock As Long, ByVal X As Double, ByVal Y As Double, ByVal Z As Double, ByVal ScaleX As Double, ByVal ScaleY As Double, ByVal ScaleZ As Double, ByVal RotAngle As Double)
Public Declare Function CadAddCustProp Lib "vecad.dll" (ByVal IdProp As Long, ByVal szName As String, ByVal szValue As String, ByVal ValType As Long) As Long
Public Declare Function CadSetCustProp Lib "vecad.dll" (ByVal IdProp As Long, ByVal szValue As String) As Long
Public Declare Function CadSetCustPropMode Lib "vecad.dll" (ByVal IdProp As Long, ByVal bReadOnly As Long) As Long
Public Declare Function CadAddCommand Lib "vecad.dll" (ByVal hDwg As Long, ByVal Id As Long, ByVal szCmdName As String, ByVal szAlias As String, ByVal hCurs As Long, ByVal pFunc1 As Any, ByVal pFunc2 As Any) As Long
Public Declare Sub      CadCmdPutData Lib "vecad.dll" (ByVal hDwg As Long, ByVal pData As Any, ByVal nBytes As Long)
Public Declare Sub      CadCmdGetData Lib "vecad.dll" (ByVal hDwg As Long, ByVal pData As Any)
Public Declare Function CadCmdGetSize Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Sub      CadCmdPrompt Lib "vecad.dll" (ByVal hDwg As Long, ByVal szText As String, ByVal szDefaultValue As String)
Public Declare Sub      CadCmdPromptAdd Lib "vecad.dll" (ByVal hDwg As Long, ByVal szValue As String)
Public Declare Function CadCmdUserSelect Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Function CadCmdUserGetEntity Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Function CadCmdUserInput Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Sub      CadCmdGetInputPoint Lib "vecad.dll" (ByVal hDwg As Long, ByVal pX As Long, ByVal pY As Long, ByVal pZ As Long)
Public Declare Sub      CadCmdGetInputStr Lib "vecad.dll" (ByVal hDwg As Long, ByVal szText As Any)
Public Declare Function CadCmdStrToPoint Lib "vecad.dll" (ByVal hDwg As Long, ByVal szValue As String, ByVal pX As Long, ByVal pY As Long, ByVal pZ As Long) As Long
Public Declare Sub      CadCmdSetBasePoint Lib "vecad.dll" (ByVal hDwg As Long, ByVal X As Double, ByVal Y As Double, ByVal Z As Double)
Public Declare Function CadCmdAddPoint Lib "vecad.dll" (ByVal hDwg As Long, ByVal X As Double, ByVal Y As Double, ByVal Z As Double) As Long
Public Declare Function CadCmdGetPoint Lib "vecad.dll" (ByVal hDwg As Long, ByVal iPoint As Long, ByVal pX As Long, ByVal pY As Long, ByVal pZ As Long) As Long
Public Declare Function CadCmdCountPoints Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Sub      CadSelClear Lib "vecad.dll" (ByVal hDwg As Long)
Public Declare Sub      CadSelectEntity Lib "vecad.dll" (ByVal hDwg As Long, ByVal hEnt As Long, ByVal bSelect As Long)
Public Declare Function CadSelectByLayer Lib "vecad.dll" (ByVal hDwg As Long, ByVal bSelect As Long) As Long
Public Declare Function CadSelectByPage Lib "vecad.dll" (ByVal hDwg As Long, ByVal bSelect As Long) As Long
Public Declare Function CadSelectByPolyline Lib "vecad.dll" (ByVal hDwg As Long, ByVal hEnt As Long, ByVal bSelect As Long) As Long
Public Declare Function CadSelectByPolygon Lib "vecad.dll" (ByVal hDwg As Long, ByVal hEnt As Long, ByVal bCross As Long, ByVal bSelect As Long) As Long
Public Declare Function CadSelectByDist Lib "vecad.dll" (ByVal hDwg As Long, ByVal X As Double, ByVal Y As Double, ByVal Z As Double, ByVal Dist As Double, ByVal bCross As Long, ByVal bSelect As Long) As Long
Public Declare Function CadSelCount Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Function CadSelGetFirstPtr Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Function CadSelGetNextPtr Lib "vecad.dll" (ByVal hDwg As Long, ByVal hPtr As Long) As Long
Public Declare Sub      CadSelErase Lib "vecad.dll" (ByVal hDwg As Long)
Public Declare Sub      CadSelCopy Lib "vecad.dll" (ByVal hDwg As Long)
Public Declare Sub      CadSelMove Lib "vecad.dll" (ByVal hDwg As Long, ByVal dx As Double, ByVal dy As Double, ByVal dz As Double)
Public Declare Sub      CadSelScale Lib "vecad.dll" (ByVal hDwg As Long, ByVal x0 As Double, ByVal y0 As Double, ByVal z0 As Double, ByVal Scal As Double)
Public Declare Sub      CadSelRotate Lib "vecad.dll" (ByVal hDwg As Long, ByVal x0 As Double, ByVal y0 As Double, ByVal z0 As Double, ByVal Angle As Double)
Public Declare Sub      CadSelMirror Lib "vecad.dll" (ByVal hDwg As Long, ByVal x0 As Double, ByVal y0 As Double, ByVal z0 As Double, ByVal x1 As Double, ByVal y1 As Double, ByVal z1 As Double)
Public Declare Sub      CadSelExplode Lib "vecad.dll" (ByVal hDwg As Long)
Public Declare Function CadSelJoin Lib "vecad.dll" (ByVal hDwg As Long, ByVal Delta As Double) As Long
Public Declare Sub      CadSelColor Lib "vecad.dll" (ByVal hDwg As Long, ByVal Color As Long)
Public Declare Sub      CadSelDraw Lib "vecad.dll" (ByVal hDwg As Long, ByVal hDC As Long, ByVal WinLef As Long, ByVal WinBot As Long, ByVal WinW As Long, ByVal WinH As Long, ByVal ViewLef As Double, ByVal ViewBot As Double, ByVal ViewW As Double, ByVal ViewH As Double, ByVal idPage As Long, ByVal FillColor As Long, ByVal BordColor As Long, ByVal LwScale As Double)
Public Declare Sub      CadSelMakeGrips Lib "vecad.dll" (ByVal hDwg As Long)
Public Declare Function CadCbPaste Lib "vecad.dll" (ByVal hDwg As Long, ByVal hWnd As Long, ByVal dx As Double, ByVal dy As Double, ByVal dz As Double) As Long
Public Declare Function CadCountEntities Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Sub      CadViewPutPoint Lib "vecad.dll" (ByVal hDwg As Long, ByVal hWin As Long, ByVal X As Double, ByVal Y As Double, ByVal Z As Double)
Public Declare Sub      CadViewGetPoint Lib "vecad.dll" (ByVal hDwg As Long, ByVal hWin As Long, ByVal pX As Long, ByVal pY As Long, ByVal pZ As Long)
Public Declare Function CadViewGetPointX Lib "vecad.dll" (ByVal hDwg As Long) As Double
Public Declare Function CadViewGetPointY Lib "vecad.dll" (ByVal hDwg As Long) As Double
Public Declare Function CadViewGetPointZ Lib "vecad.dll" (ByVal hDwg As Long) As Double
Public Declare Sub      CadViewPutAngles Lib "vecad.dll" (ByVal hDwg As Long, ByVal hWin As Long, ByVal AngHor As Double, ByVal AngVer As Double)
Public Declare Function CadViewGetAngleHor Lib "vecad.dll" (ByVal hDwg As Long) As Double
Public Declare Function CadViewGetAngleVer Lib "vecad.dll" (ByVal hDwg As Long) As Double
Public Declare Sub      CadViewRect Lib "vecad.dll" (ByVal hDwg As Long, ByVal hWin As Long, ByVal Xmin As Double, ByVal Ymin As Double, ByVal Xmax As Double, ByVal Ymax As Double)
Public Declare Sub      CadViewScale Lib "vecad.dll" (ByVal hDwg As Long, ByVal hWin As Long, ByVal Scal As Double, ByVal Xcen As Long, ByVal Ycen As Long)
Public Declare Sub      CadCoordModelToDisp Lib "vecad.dll" (ByVal hDwg As Long, ByVal Xm As Double, ByVal Ym As Double, ByVal Zm As Double, ByVal pXd As Long, ByVal pYd As Long)
Public Declare Sub      CadCoordModelToWin Lib "vecad.dll" (ByVal hDwg As Long, ByVal Xm As Double, ByVal Ym As Double, ByVal Zm As Double, ByVal pXw As Long, ByVal pYw As Long)
Public Declare Sub      CadCoordDispToModel Lib "vecad.dll" (ByVal hDwg As Long, ByVal Xd As Double, ByVal Yd As Double, ByVal pXm As Long, ByVal pYm As Long, ByVal pZm As Long)
Public Declare Sub      CadCoordDispToWin Lib "vecad.dll" (ByVal hDwg As Long, ByVal Xd As Double, ByVal Yd As Double, ByVal pXw As Long, ByVal pYw As Long)
Public Declare Sub      CadCoordWinToModel Lib "vecad.dll" (ByVal hDwg As Long, ByVal Xw As Long, ByVal Yw As Long, ByVal pXm As Long, ByVal pYm As Long, ByVal pZm As Long)
Public Declare Sub      CadCoordWinToDisp Lib "vecad.dll" (ByVal hDwg As Long, ByVal Xw As Long, ByVal Yw As Long, ByVal pXd As Long, ByVal pYd As Long)
Public Declare Function CadDistWinToModel Lib "vecad.dll" (ByVal hDwg As Long, ByVal Dwin As Long) As Double
Public Declare Function CadDistModelToWin Lib "vecad.dll" (ByVal hDwg As Long, ByVal Dmod As Double) As Long
Public Declare Sub      CadPrintGetRect Lib "vecad.dll" (ByVal pLeft As Long, ByVal pBottom As Long, ByVal pRight As Long, ByVal pTop As Long)
Public Declare Sub      CadPrintPutRect Lib "vecad.dll" (ByVal Left As Double, ByVal Bottom As Double, ByVal Right As Double, ByVal Top As Double)
Public Declare Sub      CadPrintPutScale Lib "vecad.dll" (ByVal Scal As Double)
Public Declare Function CadPrintGetScale Lib "vecad.dll" () As Double
Public Declare Sub      CadPrintPutScaleLW Lib "vecad.dll" (ByVal bScaleLW As Long)
Public Declare Function CadPrintGetScaleLW Lib "vecad.dll" () As Long
Public Declare Sub      CadPrintPutOffset Lib "vecad.dll" (ByVal DX As Double, ByVal DY As Double)
Public Declare Sub      CadPrintGetOffset Lib "vecad.dll" (ByVal pDX As Long, ByVal pDY As Long)
Public Declare Sub      CadPrintPutColor Lib "vecad.dll" (ByVal bColor As Long)
Public Declare Function CadPrintGetColor Lib "vecad.dll" () As Long
Public Declare Sub      CadPrintPutCopies Lib "vecad.dll" (ByVal Ncopy As Long)
Public Declare Function CadPrintGetCopies Lib "vecad.dll" () As Long
Public Declare Sub      CadPrintPutOrient Lib "vecad.dll" (ByVal Orient As Long)
Public Declare Function CadPrintGetOrient Lib "vecad.dll" () As Long
Public Declare Sub      CadPrintPutStampPos Lib "vecad.dll" (ByVal Pos As Long)
Public Declare Function CadPrintGetStampPos Lib "vecad.dll" () As Long
Public Declare Sub      CadPrintPutStampSize Lib "vecad.dll" (ByVal TextHeight As Double)
Public Declare Function CadPrintGetStampSize Lib "vecad.dll" () As Double
Public Declare Sub      CadPrintPutStampColor Lib "vecad.dll" (ByVal Color As Long)
Public Declare Function CadPrintGetStampColor Lib "vecad.dll" () As Long
Public Declare Sub      CadPrintPutStampText Lib "vecad.dll" (ByVal szText1 As String, ByVal szText2 As String)
Public Declare Sub      CadPrintGetStampText Lib "vecad.dll" (ByVal szText1 As Any, ByVal szText2 As Any)
